# virtsynth

./: Cargo.toml  README.md  flake.nix
src/: atomicf.rs  envelope.rs  gui.rs  keyboard.rs  lib.rs  main.rs  oscilator.rs  synthesizer.rs  waveform.rs
src/gui/: knob.rs  mod.rs
