[package]
name = "virtsynth"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.0", default-features = false, features = ["default_fonts", "x11", "wgpu", "wayland"] }
cpal = { version = "0.15.3", features = ["jack"] }

[profile.dev]
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 3